trying valkka but failed to get frames

--- a/capture_server/main.ipynb
+++ b/capture_server/main.ipynb
@@ -5,7 +5,7 @@
    "id": "534745b4-4664-4500-8a3c-0837b50664f3",
    "metadata": {},
    "source": [
-    "Use `env:cv2`"
+    "Use `env:valkka`"
    ]
   },
   {
@@ -100,8 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0c14fdc8-7f53-4e15-97b7-05d81f2f95b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from valkka.core import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80afe723-b0b9-426e-abfe-78dd67b9143d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -109,9 +120,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cv2]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-cv2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -123,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
