--- a/controller/webcapture.ipynb
+++ b/controller/webcapture.ipynb
@@ -18,6 +18,7 @@
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.firefox.options import Options\n",
     "from selenium.webdriver.firefox.service import Service\n",
+    "from selenium.common.exceptions import TimeoutException\n",
     "# import selenium.common.exceptions.WebDriverException\n",
     "\n",
     "capture_interval = 1 #second(s)\n",
@@ -57,33 +58,39 @@
     "        with webdriver.Firefox(service=service, options=options) as driver:\n",
     "\n",
     "            wait = WebDriverWait(driver, wait_timeout)\n",
-    "            driver.get(f\"http://{urlhost}/\")\n",
-    "\n",
-    "            # Relogin every start of capture session\n",
     "            while True:\n",
-    "                # Login page\n",
-    "                wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button')))\n",
-    "                driver.find_element('id', 'username').send_keys('admin')\n",
-    "                driver.find_element('id', 'password').send_keys('Valerian@live1')\n",
-    "                driver.find_element('xpath', '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button').click()    \n",
-    "                print(f'Login success at {urlhost}')\n",
+    "                try:\n",
+    "                    print(f'Connecting to: http://{urlhost}/')\n",
+    "                    driver.get(f\"http://{urlhost}/\")\n",
     "\n",
-    "                # Capture button\n",
-    "                print(f'Capturing frames at {urlhost}...')\n",
-    "                wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
-    "                for _ in trange(capture_per_session):\n",
-    "                    wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
-    "                    driver.find_element('xpath', '/html/body/div[4]/div[2]/div/div[2]/span/button[3]').click()\n",
-    "                    time.sleep(capture_interval)\n",
+    "                    # Relogin every start of capture session\n",
+    "                    while True:\n",
+    "                        # Login page\n",
+    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button')))\n",
+    "                        driver.find_element('id', 'username').send_keys('admin')\n",
+    "                        driver.find_element('id', 'password').send_keys('Valerian@live1')\n",
+    "                        driver.find_element('xpath', '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button').click()    \n",
+    "                        print(f'Login success at {urlhost}')\n",
     "\n",
-    "                # Logout session\n",
-    "                # Logout button on main frame\n",
-    "                wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/div/div[2]/div[5]')))\n",
-    "                driver.find_element('xpath', '/html/body/div[2]/div/div[2]/div[5]').click()\n",
-    "                # Popup confirmation\n",
-    "                wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]')))\n",
-    "                driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
-    "                print('End of capture session. Reloggin...')\n",
+    "                        # Capture button\n",
+    "                        print(f'Capturing frames at {urlhost}...')\n",
+    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
+    "                        for _ in trange(capture_per_session):\n",
+    "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
+    "                            driver.find_element('xpath', '/html/body/div[4]/div[2]/div/div[2]/span/button[3]').click()\n",
+    "                            time.sleep(capture_interval)\n",
+    "\n",
+    "                        # Logout session\n",
+    "                        # Logout button on main frame\n",
+    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/div/div[2]/div[5]')))\n",
+    "                        driver.find_element('xpath', '/html/body/div[2]/div/div[2]/div[5]').click()\n",
+    "                        # Popup confirmation\n",
+    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]')))\n",
+    "                        driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
+    "                        print('End of capture session. Reloggin...')\n",
+    "                except TimeoutException:\n",
+    "                    print(f'Request timeout. Wait for {wait_timeout}s.')\n",
+    "                    time.sleep(wait_timeout)\n",
     "\n",
     "    except KeyboardInterrupt:\n",
     "        print(f'Stopping Hikvision capture server at {urlhost}')\n",
@@ -93,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c4d574-126e-4a04-9c57-09a2447c4cca",
+   "id": "4a511d86-d9f7-424b-81cc-c9b1472a99f5",
    "metadata": {},
    "outputs": [],
    "source": []
