movement signal threshold service. Movement signal h5py read error and strage restart behavior, and file cleanup fix

--- a/controller/movement_signal.ipynb
+++ b/controller/movement_signal.ipynb
@@ -40,6 +40,10 @@
     "    label = main(sys.argv[1:])\n",
     "    print(f'Starting movement signal server at {label}')\n",
     "    \n",
+    "    param_sw = {'outer_fence':[(21,21),0.001],\n",
+    "                'garden':[(35,35),0.25],\n",
+    "                'hallway':[(35,35),0.25]}\n",
+    "    \n",
     "    root_path = os.getcwd()\n",
     "    cache_path = os.path.join(root_path, 'cache')\n",
     "    captured_frames_path = os.path.join(cache_path, 'captured_frames')\n",
@@ -50,23 +54,23 @@
     "    movements_path = os.path.join(cache_path, 'movements')\n",
     "    average_value_path = os.path.join(movements_path, 'average_value')\n",
     "    average_value_label_path = os.path.join(average_value_path, label)\n",
-    "    os.makedirs(average_value_label_path)\n",
+    "    os.makedirs(average_value_label_path, exist_ok=True)\n",
     "    average_value_list = os.listdir(average_value_label_path)\n",
     "    average_value_latest = average_value_list[-1] if average_value_list != [] else False\n",
     "\n",
     "    # Readings cache\n",
     "    readings_path = os.path.join(movements_path, 'readings')\n",
     "    readings_label_path = os.path.join(readings_path, label)\n",
-    "    os.makedirs(readings_label_path)\n",
+    "    os.makedirs(readings_label_path, exist_ok=True)\n",
     "\n",
     "    # Readings db\n",
     "    db_path = os.path.join(root_path, 'db')\n",
     "    readings_db = os.path.join(db_path, 'movement_signal.db')\n",
     "    sqlite = Sqlite_v2()\n",
-    "    sqlite.set_table('label')\n",
+    "    sqlite.set_table(label)\n",
     "    sqlite.create_connection(readings_db)\n",
     "    readings_db_cols = ['timestamp','value']\n",
-    "    readings_db_dtypes = ['float','int']\n",
+    "    readings_db_dtypes = ['text','text']\n",
     "\n",
     "    try:\n",
     "        while True:\n",
@@ -76,25 +80,39 @@
     "            # Get updated progress\n",
     "            hotstart = True\n",
     "            average_value_list = os.listdir(average_value_label_path)\n",
-    "            average_value_latest = average_value_list[-1] if average_value_list != [] else False\n",
+    "            # average_value_latest = average_value_list[-1] if average_value_list != [] else False\n",
+    "            if average_value_list != []:\n",
+    "                avl_float = [float(i.replace('.hdf5','')) for i in average_value_list]\n",
+    "                avl_float.sort(reverse=True) # descending, highest value first\n",
+    "                average_value_latest = f'{avl_float[0]}.hdf5'\n",
+    "                # print(average_value_latest)\n",
+    "            else:\n",
+    "                average_value_latest = False\n",
     "            \n",
     "            for filename in source_list:\n",
     "                if average_value_latest and hotstart:\n",
-    "                    if (filename.replace('.jpg','') != average_value_latest.replace('.hdf5','')):\n",
+    "                    if (float(filename.replace('.jpg','')) <= float(average_value_latest.replace('.hdf5',''))):\n",
     "                        continue\n",
-    "                    elif (filename.replace('.jpg','') != average_value_latest.replace('.hdf5','')):\n",
+    "                    else:\n",
     "                        average_value_latest_path = os.path.join(average_value_label_path, average_value_latest)\n",
     "                        with h5py.File(average_value_latest_path, 'r') as f:\n",
-    "                            average_value = f[()]['average_value']\n",
+    "                            average_value = f['average_value'][()]\n",
     "                        hotstart = False\n",
-    "                elif average_value_latest == []:\n",
+    "                elif not average_value_latest and hotstart:\n",
+    "                    moving_avg_path = os.path.join(source_path, filename)\n",
+    "                    img = cv2.imread(moving_avg_path, cv2.IMREAD_GRAYSCALE)\n",
+    "                    img_blurred = cv2.GaussianBlur(img, param_sw[label][0],0)\n",
     "                    average_value = np.float32(img_blurred)\n",
+    "                    hotstart = False\n",
+    "                    \n",
+    "                if hotstart:\n",
+    "                    continue\n",
     "\n",
     "                moving_avg_path = os.path.join(source_path, filename)\n",
     "                img = cv2.imread(moving_avg_path, cv2.IMREAD_GRAYSCALE)\n",
-    "                img_blurred = cv2.GaussianBlur(img, (35,35),0)\n",
+    "                img_blurred = cv2.GaussianBlur(img, param_sw[label][0],0)\n",
     "\n",
-    "                cv2.accumulateWeighted(img_blurred, average_value, 0.25)\n",
+    "                cv2.accumulateWeighted(img_blurred, average_value, param_sw[label][1])\n",
     "\n",
     "                running_average = cv2.convertScaleAbs(average_value)\n",
     "                diff = cv2.absdiff(running_average, img_blurred)\n",
@@ -110,7 +128,7 @@
     "                    f.write(str(high_value_count)) \n",
     "\n",
     "                # Store value to db\n",
-    "                readings_db_values = [float(filename.replace('.jpg','')), int(high_value_count)]\n",
+    "                readings_db_values = [str(filename.replace('.jpg','')), str(high_value_count)]\n",
     "                sqlite.insert_value(readings_db_cols, readings_db_values, readings_db_dtypes)\n",
     "\n",
     "                # Create checkpoint of image average_value every x times. Store with timestamp\n",
@@ -122,11 +140,17 @@
     "                # Keep last 10 checkpoint\n",
     "                average_value_list = os.listdir(average_value_label_path)\n",
     "                if len(average_value_list) > 10:\n",
-    "                    for fn in average_value_list[:len(average_value_list) - 10]:\n",
-    "                        average_value_todelete = os.path.join(average_value_label_path, fn)\n",
+    "                    \n",
+    "                    avl_float = [float(i.replace('.hdf5','')) for i in average_value_list]\n",
+    "                    avl_float.sort(reverse=False) # ascending, oldest value first\n",
+    "                    # print(avl_float)\n",
+    "                        \n",
+    "                    for fn in avl_float[:len(avl_float) - 10]:\n",
+    "                        average_value_todelete = os.path.join(average_value_label_path, f'{fn}.hdf5')\n",
     "                        if os.path.isfile(average_value_todelete):\n",
     "                            os.remove(average_value_todelete)\n",
     "                            \n",
+    "            print(\"Waiting for new data...\")\n",
     "            time.sleep(2)\n",
     "    \n",
     "    except KeyboardInterrupt:\n",
