--- a/controller/movement_signal_threshold_updater.ipynb
+++ b/controller/movement_signal_threshold_updater.ipynb
@@ -3,56 +3,92 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0086ad9d-4d42-43e3-884c-3632933569de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95037619-f760-4323-8825-836d1f7ecad2",
+   "id": "f12ef1c0-ca82-4749-aee6-a1446de6d06d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate std\n",
-    "# Remove value that are lower than std\n",
-    "# Calculate new std\n",
-    "# Calculate new mean\n",
-    "# > mean + 2*std -> attention\n",
-    "# > mean + 4*std -> alert\n",
-    "# > mean + 8*std -> danger!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1bf3e87-6472-481f-bd66-6fa4eb56a43c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "high_value_counts_np = np.array(high_value_counts)\n",
-    "higher_std = high_value_counts_np[high_value_counts_np > np.std(high_value_counts)]\n",
-    "threshold = higher_std.mean() + higher_std.std()\n",
+    "import pandas as pd\n",
+    "from global_modules import Sqlite\n",
+    "import os\n",
+    "import sys, getopt\n",
+    "import time\n",
     "\n",
-    "for i, (fn, val) in enumerate(zip(selected_source_list, high_value_counts)):\n",
-    "    if val > threshold:\n",
-    "        print(f'{i} {fn} {val}')\n",
-    "        "
+    "def main(argv):\n",
+    "    opts, args = getopt.getopt(argv, \"hl:\")\n",
+    "    for opt, arg in opts:\n",
+    "        if opt == '-h':\n",
+    "            print('-l <label>')\n",
+    "            sys.exit()\n",
+    "        elif opt in ('-l'):\n",
+    "            return arg\n",
+    "        else:\n",
+    "            print('Please specify label parameter first')\n",
+    "            sys.exit()\n",
+    "            \n",
+    "if __name__ == '__main__':\n",
+    "    \n",
+    "    label = main(sys.argv[1:])\n",
+    "    # print(sys.argv[1:])\n",
+    "    # print(label)\n",
+    "\n",
+    "    root_path = os.getcwd()\n",
+    "    db_path = os.path.join(root_path, 'db')\n",
+    "    movement_signal_db_path = os.path.join(db_path, 'movement_signal.db')\n",
+    "    cache_path = os.path.join(root_path, 'cache')\n",
+    "    movements_path = os.path.join(cache_path, 'movements')\n",
+    "    thresholds_path = os.path.join(movements_path, 'thresholds')\n",
+    "    thresholds_label_path = os.path.join(thresholds_path, label)\n",
+    "    os.makedirs(thresholds_label_path, exist_ok=True)\n",
+    "    \n",
+    "    # Constants\n",
+    "    capture_rate = 1.65 #seconds\n",
+    "    data_limit = int(24 * 60 * 60 / capture_rate) # 24hrs * 60mins * 60secs, a day in seconds\n",
+    "    \n",
+    "    # Database initialization\n",
+    "    sqlite = Sqlite()\n",
+    "    sqlite.set_table(label)\n",
+    "    sqlite.create_connection(movement_signal_db_path)\n",
+    "    \n",
+    "    # Processing threshold\n",
+    "    try:\n",
+    "        while True:\n",
+    "            df = pd.read_sql(f'select * from {label} order by ROWID desc limit {data_limit}', sqlite.conn)\n",
+    "            df['value'] = df['value'].astype('int')\n",
+    "            filtered_1std = df.loc[df['value'] > (df['value'].mean() + df['value'].std())]\n",
+    "            threshold = filtered_1std['value'].mean() + filtered_1std['value'].std()\n",
+    "            timestamp = df.iloc[0]['timestamp']\n",
+    "\n",
+    "            # Store threshold\n",
+    "            threshold_path = os.path.join(thresholds_label_path, f'{timestamp}.cache')\n",
+    "            with open(threshold_path, 'w') as f:\n",
+    "                f.write(str(threshold))\n",
+    "\n",
+    "            # Keep last 10 threshold\n",
+    "            threshold_value_list = os.listdir(thresholds_label_path)\n",
+    "            if len(threshold_value_list) > 10:\n",
+    "\n",
+    "                tvl_float = [float(i.replace('.cache','')) for i in threshold_value_list]\n",
+    "                tvl_float.sort(reverse=False) # ascending, oldest value first\n",
+    "\n",
+    "                for fn in tvl_float[:len(tvl_float) - 10]:\n",
+    "                    threshold_value_todelete = os.path.join(thresholds_label_path, f'{fn}.cache')\n",
+    "                    if os.path.isfile(threshold_value_todelete):\n",
+    "                        os.remove(threshold_value_todelete)\n",
+    "\n",
+    "            print('Waiting for new data...')\n",
+    "            time.sleep(60)\n",
+    "    \n",
+    "    except KeyboardInterrupt:\n",
+    "        print(f'Stopping movement signal threshold server at {label}')\n",
+    "        pass\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f84f5f5-a95d-48bf-b2e0-1b7e60bbe535",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2076109-ae06-4fda-ab33-9cc5c3852d35",
+   "id": "965ff886-a972-4c12-954a-457555ca5fb6",
    "metadata": {},
    "outputs": [],
    "source": []
