--- a/controller/webcapture.ipynb
+++ b/controller/webcapture.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "options = Options()\n",
     "options.binary_location = browser_bin_path\n",
-    "service = Service(driver_bin_path)\n",
+    "service = Service(executable_path=driver_bin_path, log_path=os.devnull)\n",
     "\n",
     "def main(argv):\n",
     "    opts, args = getopt.getopt(argv, \"hu:\")\n",
