signal alert and telegram notifications

--- a/controller/movement_signal_alert.ipynb
+++ b/controller/movement_signal_alert.ipynb
@@ -84,7 +84,7 @@
     "                \n",
     "            time.sleep(0.5)\n",
     "    except KeyboardInterrupt:\n",
-    "        print(f'Stopping movement signal server at {label}')\n",
+    "        print(f'Stopping movement signal alert server at {label}')\n",
     "        pass\n",
     "        "
    ]
