--- a/controller/movement_signal_threshold_updater.ipynb
+++ b/controller/movement_signal_threshold_updater.ipynb
@@ -88,6 +88,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4afb13e0-9453-43a5-9203-3e7facf66f1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "root_path = os.getcwd()\n",
+    "db_path = os.path.join(root_path, 'db')\n",
+    "movement_signal_db_path = os.path.join(db_path, 'movement_signal.db')\n",
+    "\n",
+    "# Constants\n",
+    "capture_rate = 1.65 #seconds\n",
+    "data_limit = int(24 * 60 * 60 / capture_rate) # 24hrs * 60mins * 60secs, a day in seconds\n",
+    "\n",
+    "# Database initialization\n",
+    "sqlite = Sqlite()\n",
+    "sqlite.set_table(label)\n",
+    "sqlite.create_connection(movement_signal_db_path)\n",
+    "\n",
+    "df = pd.read_sql(f'select * from {label} order by ROWID desc limit {data_limit}', sqlite.conn)\n",
+    "df['value'] = df['value'].astype('int')\n",
+    "filtered_1std = df.loc[df['value'] > (df['value'].mean() + df['value'].std())]\n",
+    "threshold = filtered_1std['value'].mean() + filtered_1std['value'].std()\n",
+    "timestamp = df.iloc[0]['timestamp']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad5cf6d7-ccde-47db-80cd-80b2f7834363",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "255ae4cb-e9ab-4c43-8dc5-6e8fcbbd632b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdd1d02a-f00a-4e55-a1e8-717f9635f4b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "218572d3-d7ce-46f5-ba2b-3461dcfb5c08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60543bbd-8143-4dcf-a87d-ec73b24fa15a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f83eb88-43ac-442c-a4cf-eb6e3898f06b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "965ff886-a972-4c12-954a-457555ca5fb6",
    "metadata": {},
    "outputs": [],
