--- a/controller/notifications.ipynb
+++ b/controller/notifications.ipynb
@@ -27,11 +27,13 @@
     "            root_path = os.getcwd()\n",
     "            cache_path = os.path.join(root_path, 'cache')\n",
     "            notifications_path = os.path.join(cache_path, 'notifications')\n",
+    "            os.makedirs(notifications_path, exist_ok=True)\n",
     "            notifications_label_list = os.listdir(notifications_path)\n",
     "\n",
     "            captured_frames_path = os.path.join(cache_path, 'captured_frames')\n",
     "            \n",
-    "            proof_path = os.path.join(cache_path, 'proof')\n",
+    "            deception_path = os.path.join(cache_path, 'deception')\n",
+    "            os.makedirs(deception_path, exist_ok=True)\n",
     "            \n",
     "            db_path = os.path.join(root_path, 'db')\n",
     "            notifications_db = os.path.join(db_path, 'notifications.db')\n",
@@ -46,6 +48,7 @@
     "\n",
     "            for notification_label in notifications_label_list:\n",
     "                notifications_label_path = os.path.join(notifications_path, notification_label)\n",
+    "                os.makedirs(notifications_label_path, exist_ok=True)\n",
     "\n",
     "                notifications_list = os.listdir(notifications_label_path)\n",
     "                nl_float = [float(i.replace('.cache','')) for i in notifications_list]\n",
@@ -85,9 +88,16 @@
     "                        captured_frames_img.close()\n",
     "                        \n",
     "                    # Store to proofing server\n",
-    "                    proof_path_fn =  os.path.join(proof_path, notification_fn)\n",
+    "                    proof_label_path = os.path.join(proof_path, notification_label)\n",
+    "                    os.makedirs(proof_label_path, exist_ok=True)\n",
+    "                    proof_path_fn =  os.path.join(proof_label_path, notification_fn)\n",
     "                    with open(proof_path_fn, 'w') as f:\n",
     "                        f.write(sha256)\n",
+    "                        \n",
+    "                    # Store to deception server\n",
+    "                    deception_path_fn = os.path.join(deception_path, notification_fn) \n",
+    "                    with open(deception_path_fn, 'w') as f:\n",
+    "                        f.write('0')\n",
     "                        \n",
     "                    # Store to db\n",
     "                    notifications_db_values = [notification_fn.replace('.cache',''), sha256, '0', notification_label]\n",
