increase service realibility

--- a/controller/movement_signal.ipynb
+++ b/controller/movement_signal.ipynb
@@ -40,7 +40,8 @@
     "    label = main(sys.argv[1:])\n",
     "    print(f'Starting movement signal server at {label}')\n",
     "    \n",
-    "    param_sw = {'outer_fence':[(21,21),0.001],\n",
+    "    # Old outer_fence value: [(21,21),0.001]\n",
+    "    param_sw = {'outer_fence':[(35,35),0.25],\n",
     "                'garden':[(35,35),0.25],\n",
     "                'hallway':[(35,35),0.25]}\n",
     "    \n",
@@ -76,6 +77,9 @@
     "        while True:\n",
     "            # Get updated source list\n",
     "            source_list = os.listdir(source_path)\n",
+    "            source_list_fl = [float(i.replace('.jpg','')) for i in source_list]\n",
+    "            source_list_fl.sort(reverse=False) # ascending, lowest value first\n",
+    "            source_list = [i for _, i in sorted(zip(source_list_fl, source_list))]\n",
     "            \n",
     "            # Get updated progress\n",
     "            hotstart = True\n",
@@ -110,7 +114,15 @@
     "\n",
     "                moving_avg_path = os.path.join(source_path, filename)\n",
     "                img = cv2.imread(moving_avg_path, cv2.IMREAD_GRAYSCALE)\n",
-    "                img_blurred = cv2.GaussianBlur(img, param_sw[label][0],0)\n",
+    "                \n",
+    "                try:\n",
+    "                    img_blurred = cv2.GaussianBlur(img, param_sw[label][0],0)\n",
+    "                except cv2.error as e:\n",
+    "                    print(e)\n",
+    "                    print('Removing troubled files and continue...')\n",
+    "                    print(moving_avg_path)\n",
+    "                    os.remove(moving_avg_path)\n",
+    "                    continue\n",
     "\n",
     "                cv2.accumulateWeighted(img_blurred, average_value, param_sw[label][1])\n",
     "\n",
@@ -150,7 +162,7 @@
     "                        if os.path.isfile(average_value_todelete):\n",
     "                            os.remove(average_value_todelete)\n",
     "                            \n",
-    "            print(\"Waiting for new data...\")\n",
+    "            print(f\"movement_signal.py -l {label} is waiting for new data...\")\n",
     "            time.sleep(2)\n",
     "    \n",
     "    except KeyboardInterrupt:\n",
