--- a/controller/movement_signal_alert.ipynb
+++ b/controller/movement_signal_alert.ipynb
@@ -67,8 +67,14 @@
     "\n",
     "            for reading_fn in readings_list_ff:\n",
     "                reading_path = os.path.join(readings_label_path, reading_fn)\n",
-    "                with open(reading_path, 'r') as f:\n",
-    "                    reading = int(f.read())\n",
+    "                try:\n",
+    "                    with open(reading_path, 'r') as f:\n",
+    "                        reading = int(f.read())\n",
+    "                except ValueError:\n",
+    "                    print(\"Value error. Assume 0 reading value.\")\n",
+    "                    reading = 0\n",
+    "                    with open(reading_path, 'w') as f:\n",
+    "                        f.write(str(0))\n",
     "\n",
     "                if reading > threshold:\n",
     "                    notifications_path = os.path.join(notifications_label_path, reading_fn)\n",
@@ -80,7 +86,11 @@
     "                        f.write(content)\n",
     "\n",
     "                # Delete reading cache that has been processed\n",
-    "                os.remove(reading_path)\n",
+    "                try:\n",
+    "                    os.remove(reading_path)\n",
+    "                except PermissionError:\n",
+    "                    print(f'Failed to remove {reading_path}')\n",
+    "                    pass\n",
     "                \n",
     "            time.sleep(0.5)\n",
     "    except KeyboardInterrupt:\n",
