--- a/controller/movement_signal_threshold_updater.ipynb
+++ b/controller/movement_signal_threshold_updater.ipynb
@@ -42,7 +42,9 @@
     "    \n",
     "    # Constants\n",
     "    capture_rate = 1.65 #seconds\n",
-    "    data_limit = int(24 * 60 * 60 / capture_rate) # 24hrs * 60mins * 60secs, a day in seconds\n",
+    "    # 24hrs * 60mins * 60secs, a day in seconds (old value)\n",
+    "    # 1hr * 5mins * 60secs, a day in seconds\n",
+    "    data_limit = int(1 * 5 * 60 / capture_rate) \n",
     "    \n",
     "    # Database initialization\n",
     "    sqlite = Sqlite()\n",
@@ -54,7 +56,7 @@
     "        while True:\n",
     "            df = pd.read_sql(f'select * from {label} order by ROWID desc limit {data_limit}', sqlite.conn)\n",
     "            df['value'] = df['value'].astype('int')\n",
-    "            threshold = df['value'].mean() + 1*df['value'].std()\n",
+    "            threshold = df['value'].mean() + 3*df['value'].std()\n",
     "            # filtered_1std = df.loc[df['value'] > (df['value'].mean() + df['value'].std())]\n",
     "            # threshold = filtered_1std['value'].mean() + filtered_1std['value'].std()\n",
     "            timestamp = df.iloc[0]['timestamp']\n",
@@ -76,8 +78,8 @@
     "                    if os.path.isfile(threshold_value_todelete):\n",
     "                        os.remove(threshold_value_todelete)\n",
     "\n",
-    "            print('Waiting for new data...')\n",
-    "            time.sleep(60)\n",
+    "            print(f\"movement_signal_threshold_updater.py -l {label} is waiting for new data...\")\n",
+    "            time.sleep(10)\n",
     "    \n",
     "    except KeyboardInterrupt:\n",
     "        print(f'Stopping movement signal threshold server at {label}')\n",
