--- a/controller/notifications.ipynb
+++ b/controller/notifications.ipynb
@@ -79,13 +79,20 @@
     "\n",
     "                    # Send Messages\n",
     "                    for CHAT_ID in CHAT_IDS:\n",
-    "                        captured_frames_img = open(captured_frames_img_path_cache, 'rb')\n",
-    "                        files = {'photo': captured_frames_img}\n",
-    "                        send_message = f'https://api.telegram.org/bot{TOKEN}/sendPhoto?chat_id={CHAT_ID}&caption={caption}'\n",
-    "                        response = requests.get(send_message, files=files)\n",
-    "                        # print(response.content)\n",
-    "                        # print(f'Sent to: {CHAT_ID}')\n",
-    "                        captured_frames_img.close()\n",
+    "                        sent = False\n",
+    "                        while not sent:\n",
+    "                            try:\n",
+    "                                captured_frames_img = open(captured_frames_img_path_cache, 'rb')\n",
+    "                                files = {'photo': captured_frames_img}\n",
+    "                                send_message = f'https://api.telegram.org/bot{TOKEN}/sendPhoto?chat_id={CHAT_ID}&caption={caption}'\n",
+    "                                response = requests.get(send_message, files=files)\n",
+    "                                # print(response.content)\n",
+    "                                # print(f'Sent to: {CHAT_ID}')\n",
+    "                                captured_frames_img.close()\n",
+    "                                sent = True\n",
+    "                            except requests.exceptions.RequestException as e:\n",
+    "                                print(f'{e} Trying to send notification. Wait for 5 seconds.')\n",
+    "                                time.sleep(5)\n",
     "                        \n",
     "                    # Store to proofing server\n",
     "                    proof_label_path = os.path.join(proof_path, notification_label)\n",
@@ -104,7 +111,10 @@
     "                    sqlite.insert_value(notifications_db_cols, notifications_db_values, notifications_db_dtypes)\n",
     "                        \n",
     "                    # Clear cache\n",
-    "                    os.remove(captured_frames_img_path_cache)\n",
+    "                    try:\n",
+    "                        os.remove(captured_frames_img_path_cache)\n",
+    "                    except PermissionError:\n",
+    "                        print(f'Failed to remove {captured_frames_img_path_cache}')\n",
     "                    os.remove(notification_path)\n",
     "                    \n",
     "            #         break\n",
