--- a/controller/cleanup.ipynb
+++ b/controller/cleanup.ipynb
@@ -21,22 +21,23 @@
     "    keep_records_for = 2 # day\n",
     "    date_threshold = (datetime.now() - timedelta(hours=24)).timestamp()\n",
     "\n",
-    "    try:\n",
-    "        captured_frames_labels = os.listdir(captured_frames_path)\n",
-    "        for label in captured_frames_labels:\n",
-    "            captured_frames_label_path = os.path.join(captured_frames_path, label)\n",
-    "            captured_frames_list = os.listdir(captured_frames_label_path)\n",
-    "            \n",
-    "            for captured_frames_fn in captured_frames_list:\n",
-    "                if float(captured_frames_fn.replace('.jpg','')) < date_threshold:\n",
-    "                    captured_frames_list_path = os.path.join(captured_frames_label_path, captured_frames_fn)\n",
-    "                    os.remove(captured_frames_list_path)\n",
+    "    while True:\n",
+    "        try:\n",
+    "            captured_frames_labels = os.listdir(captured_frames_path)\n",
+    "            for label in captured_frames_labels:\n",
+    "                captured_frames_label_path = os.path.join(captured_frames_path, label)\n",
+    "                captured_frames_list = os.listdir(captured_frames_label_path)\n",
     "\n",
-    "        time.sleep(15)\n",
+    "                for captured_frames_fn in captured_frames_list:\n",
+    "                    if float(captured_frames_fn.replace('.jpg','')) < date_threshold:\n",
+    "                        captured_frames_list_path = os.path.join(captured_frames_label_path, captured_frames_fn)\n",
+    "                        os.remove(captured_frames_list_path)\n",
     "\n",
-    "    except KeyboardInterrupt:\n",
-    "        print(f'Stopping cleanup server')\n",
-    "        pass"
+    "            time.sleep(15)\n",
+    "\n",
+    "        except KeyboardInterrupt:\n",
+    "            print(f'Stopping cleanup server')\n",
+    "            pass"
    ]
   },
   {
